@@ -20,6 +20,8 @@
     <script type="text/javascript" src="../ux/RowEditor.js"></script>
     <script type="text/javascript" src="../ux/DataView-more.js"></script>
 
+    <script type="text/javascript" src="../include/util.js"></script>
+
     <script type="text/javascript" src="../global.js"></script>
     <script type="text/javascript" src="../include/ext.ux.xbmc.js"></script>
     <script type="text/javascript" src="../include/xbmc.js"></script>
