@@ -18,6 +18,8 @@
     <script type="text/javascript" src="../ux/ext-basex.js"></script>
     <script type="text/javascript" src="../ux/RowEditor.js"></script>
 
+    <script type="text/javascript" src="../include/util.js"></script>
+
     <script type="text/javascript" src="../global.js"></script>
     <script type="text/javascript" src="../include/ext.ux.xbmc.js"></script>
     <script type="text/javascript" src="../include/xbmc.js"></script>
